--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ I am a dedicated and passionate student, currently pursuing my second year of BC
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="Rejashree resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="cv.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
